--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
 						   <span>New Snehnagar, Nagpur<br>
 						         Maharashtra, India
                      </span><br>
-						   <span>(+91)744-775-2030</span><br>
-                     <span>himanshulikhar55@gmail.com</span>
+						   <span>himanshulikhar55@gmail.com</span>
 					   </p>
 
                </div>
@@ -195,7 +194,7 @@
 
                <div class="twelve columns">
 
-                  <h3>Multipart Authentication & Digilocker Management System</h3>
+                  <h3>Centre for Development of Imaging Technology</h3>
                   <p class="info">Student Intern <span>&bull;</span> <em class="date">August 2020 - Present</em></p>
 
                   <p>
@@ -344,7 +343,8 @@
 
    <!-- footer
    ================================================== -->
-   <footer>
+   <section id="contact">
+      <footer>
 
       <div class="row">
 
@@ -370,6 +370,8 @@
       </div>
 
    </footer> <!-- Footer End-->
+   </section>
+   
 
    <!-- Java Script
    ================================================== -->
