updated work ex

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="https://drive.google.com/file/d/10rc0_P-S1FnnpiDeFKbbPd0A0TCY6r-m/view?usp=sharing" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://drive.google.com/file/d/1dyviedcpJcRCTXevaxVxsICMj0fcEbay/view?usp=sharing" target=”_blank” class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -195,10 +195,10 @@
                <div class="twelve columns">
 
                   <h3>Centre for Development of Imaging Technology</h3>
-                  <p class="info">Student Intern <span>&bull;</span> <em class="date">August 2020 - Present</em></p>
+                  <p class="info">Student Intern <span>&bull;</span> <em class="date">August 2020 - December 2020</em></p>
 
                   <p>
-                  As a part of the project assigned to me, I have to develop a solution to handle different authentication methods viz. Biometric(Finger and Facial), Location based, etc. which will  act as a plugin module to integrate with any applications. I also have to develop a web service to handle the activities related to DigiLocker.
+                     Developed a Facial Authentication system for the employees at CDIT. This application can act as a plugin and can be integrated with any application. It was developed using PHP, JavaScript, MySQL, jQuery and HTML.
                   </p>
 
                </div>
